tests/error/errors_on_usage/if_expr_type_conflict.err
Error: Different types (at $FILE:6:8)
  | 
4 | @compile_guppy
5 | def foo(x: bool) -> None:
6 |     y = True if x else 42
  |         ^^^^^^^^^^^^^^^^^ Expression may refer to different types
  | 
6 |     y = True if x else 42
  |         ---- This is of type `bool`
  | 
6 |     y = True if x else 42
  |                        -- This is of type `int`

Guppy compilation failed due to 1 previous error
